Add images and styles

--- a/style.css
+++ b/style.css
@@ -1,115 +1,339 @@
-/*
-Przeglądarki internetowe nadają znacznikom HTML wartości początkowe,
-które się różnią w zależności od producenta (np. Chrome, Firefox, Opera, Internet Explorer, Microsoft Edge).
-Dlatego popularną praktyką jest tworzenie tzw. resetów,
-czyli plików CSS zawierających reguły, które nadpisują te wartości,
-aby były one jednolite niezalenie od przeglądarki.
-
-Więcej na ten temat: https://cssreset.com/what-is-a-css-reset/
-*/
-
 * {
     box-sizing: border-box;
+    font-family: 'Open Sans', sans-serif;
 }
-
-body {
-    margin: 0;
+body, html {
+    margin: 0 auto;
     padding: 0;
+    background-color: #25072e;
+    background-image: url("images/background.svg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
 }
-
 h1, h2, h3 {
     margin: 0;
 }
-
 ul {
     list-style: none;
     margin: 0;
     padding: 0;
 }
-
-/*
-ZAGADNIENIE PONADPROGRAMOWE
-
-Rekomendowany zestaw właściwości, które pozwalają na ukrycie tekstu w taki sposób,
-że będzie niewidoczny do standardowego użytkownika, a czytniki ekranowe wciąż będą go czytać.
-
-Więcej na ten temat: https://webaim.org/techniques/css/invisiblecontent/
-*/
-.screen-reader-only {
-    position: absolute;
-    left: -10000px;
-    top: auto;
-    width: 1px;
-    height: 1px;
-    overflow: hidden;
+.button {
+    width: auto;
+    height: auto;
+    padding: 10px 12px;
+    font-size: 12px;
+    letter-spacing: 1.6px;
+    background-color: rgba(204, 200, 255, 0.1);
+    color:#CCC8FF;
+    border-radius: 3px;
+    border: none;
 }
-
-/*
-Sekcja pomocnicza, aby zwizualizować pozycje głównych bloków strony. Będzie usunięta w następnych krokach.
-*/
-.page-header {
-    background-color: #ffb1b1;
+.button:hover {
+    background-color: rgba(204, 200, 255, 0.5);
 }
-
-.page-content {
-    background-color: #b0ffb0;
+.button:focus {
+    background-color: rgba(204, 200, 255, 0.5);
+    border: 1px solid #CCC8FF;
 }
-
-.page-footer {
-    background-color: #7ba3ff;
+.button:disabled {
+    color:#CCC8FF;
+    opacity: 0.1;
 }
-
-.content-section {
-    background-color: #ca9aca;
-}
-.content-section:nth-child(odd) {
-    background-color: #e69fe6;
-}
-/*
-Koniec sekcji pomocniczej
-*/
-
-/*
-Ustawiając sekcje nagłówka i stopki w pozycji 'fixed' sprawiamy,
-że niezależnie od pozycji paska przewijania elementy te będą znajdowały się
-w tej samej pozycji względem okna przeglądarki.
-Natomiast pozycję tę ustawiamy za pomocą parametrów 'top', 'bottom', 'right', 'left'.
-*/
+/* Page Header Styles */
 .page-header {
     position: fixed;
     top: 50px;
     left: 50px;
 }
-
+.content-section__header {
+    margin: 7.5% 0 4% 0;
+    height: 28px;
+    color: #ec008c;
+    letter-spacing: 3.8px;
+    font-size: 28px;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+.page-navigation__item {
+    padding: 4px;
+}
+/* Page Menu Styles */
+.page-navigation__link {
+    text-decoration: none;
+    color: #ef008c;
+    opacity: 0.8;
+    font-family: 'OpenSans';
+    font-size: 13px;
+    font-weight: bold;
+    letter-spacing: 6.7px;
+    text-decoration-style: none;
+    text-transform: uppercase;
+}
+.page-navigation__link:hover {
+    opacity: 1;
+}
+.page-navigation__link:active {
+    font-family: 'Helvetica';
+    letter-spacing: 6.5px;
+    opacity: 0.6;
+}
+.page-navigation__link:focus {
+    opacity: 1;
+}
+.page-navigation__link:disabled {
+    font-family: 'OpenSans';
+    opacity: 0.4;
+}
+.page-navigation__link:visited{
+    font-family: 'Helvetica';
+}
+/* Page Content Styles */
+.screen-reader-only {
+    display: none;
+}
+.content-section {
+    width: 100%;
+    max-width: 1200px;
+    min-height: 100vh;
+    margin: 0 auto;
+    padding: 2% 4% 2% 0%;
+    text-align: right;
+}
+.page-content {
+    width: 80%;
+    margin-left: 20%;
+    text-align: right;
+}
+/* Member List Styles */
+.band-members {
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+    justify-content: center;
+    color: #CCC8FF;
+    margin-top: 20vh;
+}
+.band-members__item {
+    text-align: left;
+    padding: 0 10px;
+}
+.band-members__name {
+    opacity: 0;
+    margin-top: 30px;
+    font-size: 15px;
+    letter-spacing: 3.8px;
+}
+.band-members__desc {
+    opacity: 0;
+    font-size: 13px;
+    letter-spacing: 3.5px;
+}
+.band-members__image{
+    opacity: 0.4;
+    height: 35vh;
+}
+.band-members__item:hover .band-members__image{
+    opacity: 1;
+}
+.band-members__item:hover .band-members__name{
+    opacity: 1;
+}
+.band-members__item:hover .band-members__desc{
+    opacity: 0.8;
+}
+.about-section {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.about-section__image {
+    border-top: 3px solid #ec008c;
+    width: 700px;
+    z-index: 1;
+}
+.about-section__desc {
+    width: 395px;
+    height: 365px;
+    position: relative;
+    bottom: 220px;
+    right: 610px;
+    text-align: left;
+    z-index: 2;
+    background-color: #25072e;
+    border-bottom: 3px solid #ec008c;
+    padding: 45px 35px;
+}
+.about-section__desc-details {
+    font-size: 13px;
+    opacity: 0.8;
+    letter-spacing: 1.5px;
+    color: #CCC8FF;
+}
+.about-section__desc-header  {
+    color: #CCC8FF;
+    font-size: 15px;
+    padding: 2% 0;
+    letter-spacing: 1.5px;
+}
+.concerts {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: flex-end;
+    padding-left: 15%;
+}
+.concerts__item {
+    padding-bottom: 20px;
+    padding-left: 35px;
+    width: 50%;
+    min-width: 250px;
+}
+.concerts__image {
+    width: 100%;
+    border-bottom: 3px solid  #ec008c;
+}
+.concerts__info {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: left;
+    width: 100%;
+    color: #CCC8FF;
+    height: 50px;
+}
+.concerts__date-wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    width: 60%;
+}
+.concerts__date {
+    font-weight: bold;
+}
+.concerts__location {
+    opacity: 0.8;
+}
+.concerts__time,
+.concerts__location{
+    display: block;
+    font-size: 13px;
+    letter-spacing: 3.5px;
+    width: 100%;
+}
+.concerts__button-wrapper {
+    width: 40%;
+    text-align: right;
+}
+.video {
+    width: 100%;
+}
+.video iframe {
+    width: 85%;
+    height: 60vh;
+    min-height: 300px;
+    border-top: 3px solid  #ec008c;
+}
+.gallery {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    padding-left: 15%;
+}
+.gallery__item {
+    width: 33.3%;
+    padding: 10px 0 0 10px;
+    min-width: 250px;
+}
+.gallery__image {
+    width: 90%;
+    border-top: 3px solid  #ec008c;
+    transition-duration: 1s;
+}
+.gallery__image:hover {
+    transform: scale(1.1);
+}
+.contact-section {
+    display: flex;
+    flex-direction: column;
+}
+.contact-section__info {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: flex-start;
+    width: 85%;
+}
+.contact-section__image {
+    width: 60%;
+}
+.contact-section__adress {
+    width: 40%;
+    padding-left: 60px;
+    color: #CCC8FF;
+    font-size: 13px;
+    text-align: left;
+    letter-spacing: 1.5px;
+}
+.form {
+    width: 100%;
+    text-align: left;
+    margin-top: 45px;
+    padding: 0;
+    color: #CCC8FF;
+}
+.form__field {
+    font-size: 13px;
+    opacity: 0.8;
+    display: flex;
+    flex-direction: column;
+}
+.form__label {
+    padding: 1% 0 1% 0;
+}
+.form__input {
+    width: 300px;
+    height: 37px;
+    background-color: #CCC8FF;
+    opacity: 0.1;
+    border: none;
+    border-radius: 3px;
+}
+.form__button {
+    margin: 25px 0;
+}
+/* Footer Styles */
 .page-footer {
     position: fixed;
     bottom: 50px;
     left: 50px;
 }
-
-/*
-Lewy margines ustawiony na kontenerze z główną zawartością strony sprawia,
-że nie będzie ona nachodzić na nagłówek i stopkę niezależnie od pozycji paska przewijania.
-Na projekcie graficznym sekcja menu ma szerokość około 170px i jest oddalona od krawędzi ekranu
-o 50px, więc można założyć, że 220px marginesu będzie wartością stosunkowo bezpieczną.
-Z kolei spady (padding) nadane na kontener wyznaczają minimalną odległość, na jaką będzie oddalona
-treść strony od otaczających ją granic kontenera (wartość "0 10%" jest
-skrótem od padding-top: 0, padding-bottom: 0, padding-left: 10%, padding-right: 10%).
-Właściwość "text-align: right" przykleja zawartość do prawej strony
-(oddziałuje na elementy, które są elementami inline'owymi, np. tekst, znaczniki <a>, <span> czy elementy z nadanym stylem "display: inline-block").
-*/
-.page-content {
-    margin-left: 220px;
-    padding: 0 10%;
-    text-align: right;
+.social-links {
+    padding-left: 0;
+    color: #ec008c;
+    font-size: 13px;
+    font-weight: bold;
 }
-
-/*
-Projekt graficzny zakłada, że każda sekcja strony będzie wypełniać całą wysokość okna przeglądarki
-lub więcej, jeśli zawartość danej sekcji jest wyższa. Dlatego świetnym rozwiązaniem
-będzie użycie jednostki "vh", która oznacza 1% wysokości okna przeglądarki z właściwością "min-height",
-która wymusza wysokość elementu na zadaną wartość lub wyższą.
-*/
-.content-section {
-    min-height: 100vh;
+.social-links__item {
+    padding: 4px;
+}
+.social-links__photo {
+    height: 18px;
+    opacity: 0.8;
+}
+.social-links__photo:hover {
+    opacity: 1;
+}
+.social-links__photo:active {
+    opacity: 0.6;
+}
+.social-links__photo:focus {
+    opacity: 1;
+}
+.social-links__photo:disabled {
+    opacity: 0.4;
 }
